--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="release_date_label">Release Date:</string>
     <string name="average_rating_label">Average Rating:</string>
     <string name="overview_label">Overview:</string>
+    <string name="content_authority">albertodimartino.com.popularmovies</string>
 </resources>
