Add reviews to list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
     <string name="app_name">Popular Movies</string>
     <string name="poster_image_description">Poster Image</string>
-    <string name="movie_title_label">Title:</string>
-    <string name="release_date_label">Release Date:</string>
-    <string name="average_rating_label">Average Rating:</string>
-    <string name="overview_label">Overview:</string>
+    <string name="movie_title_label">Title: </string>
+    <string name="release_date_label">Release Date: </string>
+    <string name="average_rating_label">Average Rating: </string>
+    <string name="overview_label">Overview: </string>
     <string name="content_authority">albertodimartino.com.popularmovies</string>
+    <string name="string_reviews_text_label">Reviews</string>
 </resources>
